src/test/ui/rfc-2005-default-binding-mode/lit.stderr
error[E0308]: mismatched types
  --> $DIR/lit.rs:7:13
   |
LL |             "abc" => true,
   |             ^^^^^ expected `&str`, found `str`
   |
   = note:   expected type `&&str`
           found reference `&'static str`

error[E0308]: mismatched types
  --> $DIR/lit.rs:16:9
   |
LL |         b"abc" => true,
   |         ^^^^^^ expected `&[u8]`, found array `[u8; 3]`
   |
   = note:   expected type `&&[u8]`
           found reference `&'static [u8; 3]`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0308`.
